# trend-lab-agent-readme-pack-260624

./: README.md  pyproject.toml
src/agent_readme_pack/: main.py
